Fixes #20436: In a directive the technique documentation button is not visibled enough

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-directives.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-directives.css
@@ -198,7 +198,7 @@
   color: #999;
 }
 .btn.btn-technical-details{
-  min-width: 150px;
+  min-width: 165px;
   transition-duration: .2s;
 }
 .btn.btn-technical-details.opened{
